added hibernate config, refactored dto's and mappers